mert nyomni, nyomni kell

--- a/src/activity-gamma-tdk.tex
+++ b/src/activity-gamma-tdk.tex
@@ -35,6 +35,19 @@
 % Table of contents and the main text
 %--------------------------------------------------------------------------------------
 \begin{document}
+	
+\lstset {
+	frame=single,
+	rulesepcolor=\color{black},
+	showspaces=false,showtabs=false,tabsize=2,
+	numberstyle=\tiny,numbers=left,
+	stringstyle=\color{sh_string},
+	keywordstyle = \color{sh_keyword}\bfseries,
+	commentstyle=\color{sh_comment}\itshape,
+	captionpos=b,
+	xleftmargin=0.7cm, xrightmargin=0.5cm,
+	escapebegin={\lstsmallmath}, escapeend={\lstsmallmathend}
+}
 
 \pagenumbering{gobble}
 \selectthesislanguage
