--- a/src/content/activity-model-verification/state-model.tex
+++ b/src/content/activity-model-verification/state-model.tex
@@ -2,6 +2,33 @@
 \section{Activities as State-based Models}
 %----------------------------------------------------------------------------
 
+
+
+\subsubsection{Gamma Extension}
+
+\begin{figure}[!ht]
+	\begin{subfigure}{.5\textwidth}
+		\centering
+		\includesvg[inkscapelatex=false, width=70mm, keepaspectratio]{gamma-activity-extension}
+		\caption{activity}
+		\label{fig:gamma-activity-extension}
+	\end{subfigure}%
+	\begin{subfigure}{.5\textwidth}
+		\centering
+		\includesvg[inkscapelatex=false, width=70mm, keepaspectratio]{gamma-statechart-extension}
+		\caption{statechart}
+		\label{fig:gamma-statechart-extension}
+	\end{subfigure}
+	\begin{subfigure}{\textwidth}
+		\centering
+		\includesvg[inkscapelatex=false, width=70mm, keepaspectratio]{gamma-lowlevel-extension}
+		\caption{lowlevel}
+		\label{fig:gamma-lowlevel-extension}
+	\end{subfigure}
+	\caption{extension}
+	\label{fig:gamma-extension}
+\end{figure}
+
 \begin{figure}[!ht]
 	\centering
 	\includesvg[inkscapelatex=false, width=120mm, keepaspectratio]{gamma-functionality-activity-overview}
