--- a/src/content/activity-language.tex
+++ b/src/content/activity-language.tex
@@ -2,7 +2,7 @@
 \chapter{Gamma Activity Language}\label{ch:gamma-activity-language}
 %----------------------------------------------------------------------------
 
-The high-level nature of SysML activities means they are easy to model complicated behaviours of distributed system, but leads to an increasingly hard time trying to run formal verification on them. In the real world, SysML models often contain state machines that call activity diagrams using a state's \emph{do behaviour}, because often times this makes the design process easier. However, models containing \emph{do activity} cannot be verified directly; the activities have to be pre-processed and transformed into something else, like javascript or state machines (\todo{cite Pragmatic Verification and Validation of Industrial Executable SysML Models}). As discussed above in \autoref{ssec:activities-as-petri-nets}, we can define a mapping between activities and Petri nets (which have exact semantics), however, that mapping is not exhaustive.
+The high-level nature of SysML activities means they are easy to model complicated behaviours of distributed system, but leads to an increasingly hard time trying to run formal verification on them. In the real world, SysML models often contain state machines that call activity diagrams using a state's \emph{do behaviour}, because often times this makes the design process easier. However, models containing \emph{do activity} cannot be verified directly; the activities have to be pre-processed and transformed into something else, like javascript or state machines \cite{10.1145/3417990.3421407}. As discussed above in \autoref{ssec:activities-as-petri-nets}, we can define a mapping between activities and Petri nets (which have exact semantics), however, that mapping is not exhaustive.
 
 The pre-existing Gamma Statechart Composition Framework (\autoref{sec:gamma}) implements this transformation-verification pipeline, however, it does not include activity diagrams. For this reason, I propose (\autoref{ch:gamma-activity-language}) the \emph{Gamma Activity Language}, and integrate it (\autoref{ch:activiy_verification}) into the pipeline shown in \autoref{fig:gamma-overview}.
 
