--- a/src/content/activity-language/formal-definition.tex
+++ b/src/content/activity-language/formal-definition.tex
@@ -2,6 +2,11 @@
 \clearpage\section{Formal Definition}
 %----------------------------------------------------------------------------
 
+\newcommand{\inflows}[1]{\ensuremath{\delta(#1)}}
+\newcommand{\outflows}[1]{\ensuremath{\Delta(#1)}}
+\newcommand{\sourcepin}[1]{\ensuremath{\phi(#1)}}
+\newcommand{\targetpin}[1]{\ensuremath{\Phi(#1)}}
+
 \todo{Finalise formalism}
 
 In order to offer mathematical precision, formal verification methods require formally defined models with clear semantics. In this section I present the formal definition of the novel GAL formalism.
@@ -12,9 +17,9 @@ In order to offer mathematical precision, formal verification methods require fo
 	\begin{itemize}
 		\item \(N = N_\mathit{Initial} \bigcup N_\mathit{Final} \bigcup N_\mathit{Pseudo} \bigcup N_\mathit{Decision} \bigcup N_\mathit{Merge} \bigcup N_\mathit{Action} \) is a set of \emph{Nodes}, where \(N_\mathit{Initial}\) contains the \emph{Initial} nodes, \(N_\mathit{Final}\) contains the \emph{Final} nodes, \(N_\mathit{Pseudo}\) contains the \emph{Pseudo} nodes, \(N_\mathit{Decision}\) contains the \emph{Decision} nodes, \(N_\mathit{Merge}\) contains the \emph{Merge} nodes and \(N_\mathit{Action}\) contains the \emph{Action} nodes;
 		\item \( P \subseteq P_\mathit{In} \bigcup P_\mathit{Out} \) is a set of two types of pins, where \(P_\mathit{In} : N_\mathit{Action} \rightarrow \{ p_1, \dots, p_n \} \) and \(P_\mathit{Out} : N_\mathit{Action} \rightarrow \{ p_1, \dots, p_n \} \) are the set of \emph{InputPins} and \emph{OutputPins}, respectively, with domains \(\{ d_1, \dots, d_n \} \subseteq D \);
-		\item \( F \subseteq F_C \bigcup F_D \), where \(F_C = \{ F_{C1}, \dots, F_{Cn} \} \) and \(F_D = \{ F_{D1}, \dots, F_{Dn} \} \) are the control and data flows, respectively. Let us denote the input/output flows of node \(n\) as \( \delta(n) \) and \( \Delta(n) \), and the source/target pins of flow \(f\) as \(\phi(f)\) and \(\Phi(f)\). For any given node \(n\), \( \delta(n) \neq \Delta(n) \) and for any given action node \(n_a\) \( \Phi(f) \in P_\mathit{In}(n_a) \forall f \in F_D \bigcap \delta(n_a) \) and \( \phi(f) \in P_\mathit{Out}(n_a) \forall f \in F_D \bigcap \Delta(n_a) \) shall always hold. This means, that a flow cannot be input and output to the same node at the same time, and for a given action node, all input/output flows shall be associated with an input/output token, respectively;
+		\item \( F \subseteq F_C \bigcup F_D \), where \(F_C = \{ f_{C_1}, \dots, f_{C_n} \} \) and \(F_D = \{ f_{D_1}, \dots, f_{D_n} \} \) are the control and data flows, respectively. Let us denote the input/output flows of node \(n\) as \( \inflows{n} \) and \( \outflows{n} \), and the source/target pins of flow \(f\) as \( \sourcepin{f} \) and \(\targetpin{f}\). For any given node \(n\), \( \inflows{n} \neq \outflows{n} \) and for any given action node \(n_a\) \( \targetpin{f} \in P_\mathit{In}(n_a) \forall f \in F_D \bigcap \inflows{n_a} \) and \( \sourcepin{f} \in P_\mathit{Out}(n_a) \forall f \in F_D \bigcap \outflows{n_a} \) shall always hold. This means, that a flow cannot be input and output to the same node at the same time, and for a given action node, all input/output flows shall be associated with an input/output token, respectively;
 		\item \(G : F \rightarrow \{ \mathit{True}, \mathit{False} \} \) is a function determining whether a given flow is enabled;
-		\item \(D = \{ D_{1}, D_{2}, \dots, D_{n} \} \) is a set of value domains;
+		\item \(D = \{ d_{1}, d_{2}, \dots, d_{n} \} \) is a set of value domains;
 		\item \(F_{Action} : N \rightarrow D \) is a function running the contained action, and returning it's result values.
 	\end{itemize}
 	
@@ -62,19 +67,19 @@ Informally, the state of Gamma Activities are determined by the nodes' \emph{sta
 	F_{In} : N \rightarrow
 	\begin{cases}
 		\begin{aligned}[b]
-			&\text{select } f_s f_s \in \delta(n) \wedge S_F(f) = \mathit{Full} \\
+			&\text{select } f_s f_s \in \inflows{n} \wedge S_F(f) = \mathit{Full} \\
 			&V_N^\prime(n) = V_F(f_s) \\
 			&S_F^\prime(f_s) = \mathit{Empty} \\
 			&S_N^\prime(n) = \mathit{Running},
 		\end{aligned} & \text{if } n \in N_\mathit{Merge} \\[8pt]
 		\begin{aligned}[b]
-			&\mathit{PV}_N^\prime(n, \Phi(f)) = V_F(f) : \forall f \in \delta(n) \bigcap F_D \\
-			&S_F^\prime(f) = \mathit{Empty} : \forall f \in \delta(n) \\
+			&\mathit{PV}_N^\prime(n, \targetpin{f}) = V_F(f) : \forall f \in \inflows{n} \bigcap F_D \\
+			&S_F^\prime(f) = \mathit{Empty} : \forall f \in \inflows{n} \\
 			&S_N^\prime(n) = \mathit{Running},
 		\end{aligned} & \text{if } n \in N_\mathit{Action} \\[8pt]
 		\begin{aligned}[b]
-			&V_N^\prime(n) = V_F(f) : f \in \delta(n) \bigcap F_D \\
-			&S_F^\prime(f) = \mathit{Empty} : \forall f \in \delta(n) \\
+			&V_N^\prime(n) = V_F(f) : f \in \inflows{n} \bigcap F_D \\
+			&S_F^\prime(f) = \mathit{Empty} : \forall f \in \inflows{n} \\
 			&S_N^\prime(n) = \mathit{Running},
 		\end{aligned} & \text{otherwise}
 	\end{cases}
@@ -107,18 +112,18 @@ In words, the function \(F_{Run}\) stochastically sets the given node's state to
 	F_{Out} : N \rightarrow
 	\begin{cases}
 		\begin{aligned}[b]
-			&\text{select } f_s \in \Delta(n) \wedge S_F(f_s) = \mathit{Empty} \wedge G(f_s) = \mathit{True} \\
+			&\text{select } f_s \in \outflows{n} \wedge S_F(f_s) = \mathit{Empty} \wedge G(f_s) = \mathit{True} \\
 			&V_F^\prime(f_s) = V_N(n) \\
 			&S_F^\prime(f_s) = \mathit{Full} \\
 			&S_N^\prime(n) = \mathit{Idle},
 		\end{aligned} & \text{if } n \in N_\mathit{Decision} \\[8pt]
 		\begin{aligned}[b]
-			&V_F^\prime(f) = \mathit{PV}_N(n, \phi(f)) : \forall f \in \Delta(n) \bigcap F_D \\
-			&S_F^\prime(f) = \mathit{Full} : \forall f \in \Delta(n) \\
+			&V_F^\prime(f) = \mathit{PV}_N(n, \sourcepin{f}) : \forall f \in \outflows{n} \bigcap F_D \\
+			&S_F^\prime(f) = \mathit{Full} : \forall f \in \outflows{n} \\
 			&S_N^\prime(n) = \mathit{Idle},
 		\end{aligned} & \text{if } n \in N_\mathit{Action} \\[8pt]
 		\begin{aligned}[b]
-			&S_F^\prime(f) = \mathit{Full} : \forall f \in \Delta(n) \\
+			&S_F^\prime(f) = \mathit{Full} : \forall f \in \outflows{n} \\
 			&S_N^\prime(n) = \mathit{Idle},
 		\end{aligned} & \text{otherwise}
 	\end{cases}
@@ -138,7 +143,7 @@ The function \(F_{Our}\) takes the token from node, and puts it in its output fl
 
 \begin{figure}[!ht]
 	\centering
-	\includesvg[inkscapelatex=false, width=120mm, keepaspectratio]{activity-state-function}
+	\includesvg[inkscapelatex=false, width=110mm, keepaspectratio]{activity-state-function}
 	\caption{An illustration of activity node state and change functions}
 	\label{fig:activity-state-function}
 \end{figure}
